--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@playwright/test": "^1.37.0",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "eslint": "^8.49.0"
+    "eslint": "^8.49.0",
+    "prettier": "3.0.3"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
